--- a/CVRP.ipynb
+++ b/CVRP.ipynb
@@ -31,7 +31,7 @@
     "n = 5 #liczba klientow\n",
     "Q = 20 #pojemnosc pojazdow\n",
     "N = [i for i in range(1, n+1)] #indeksy klinetow\n",
-    "V = [0] + N # indeksy pojazdow\n",
+    "V = [0] + N # indeksy wszystkich obiektow\n",
     "q = {i: rnd.randint(1, 10) for i in N} #zapotrzebowanie klientow"
    ]
   },
